--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pay-me",
+  "homepage": "https://arthurborgess.github.io/react-pay-me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,14 +11,19 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-modal": "^3.13.1",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "gh-pages": "^4.0.0"
   }
 }
